--- a/src/App.css
+++ b/src/App.css
@@ -63,3 +63,28 @@
   margin: auto;
   text-align: left;
 }
+
+.menu{
+  width: 80%;
+  text-align: left;
+  left: -100%;
+  position: fixed;
+  transition: 0.5%;
+  list-style: none;
+  height: 100vh;
+  background-color: yellow;
+}
+
+.activeMenu{
+  left: 0%;
+}
+
+.menu ul li{
+  list-style: none;
+  padding: 10px 0px;
+}
+
+.micon{
+  position: absolute;
+  right: 10px;
+}
