--- a/src/App.css
+++ b/src/App.css
@@ -88,3 +88,22 @@
   position: absolute;
   right: 10px;
 }
+
+.modalOverLay{
+  width: 100%;
+  position: fixed;
+  display: none;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
+}
+
+.ModalDiv{
+  width: 320px;
+  position: fixed;
+  height: 320px;
+  left: 50%;
+  transition: 0.3%;
+   top: -500px; 
+  transform: translate(-50%,-50%);
+  background-color: white;
+}
