--- a/src/App.css
+++ b/src/App.css
@@ -169,3 +169,30 @@ form input{
 form button{
   flex-basis: 20%;
 }
+
+.outerDiv{
+  width: 1170px;
+  margin: auto;
+}
+
+.outerDiv ul{
+  margin: 0px;
+  margin-top: 50px;
+  padding: 0px;
+  list-style: none;
+}
+.outerDiv ul li{
+  color: white;
+  padding: 10px;
+  font-size: 25px;
+  margin-bottom: 20px;
+  position: relative;
+  text-align:left;
+  background-color: black;
+}
+
+.outerDiv ul li span{
+  right: 20px;
+  cursor: pointer;
+  position: absolute;
+}
