--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -43,7 +43,7 @@
   background-color: #61dafb;
 } */
 
-.row{
+/* .row{
   width: 1320px;
   margin: auto;
   flex-wrap: wrap;
@@ -195,4 +195,21 @@ form button{
   right: 20px;
   cursor: pointer;
   position: absolute;
+}  */
+
+
+
+body{
+  background-color: rgb(43,43,72);
+   width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.passwordBox{
+  width: 300px;
+  height: 300px;
+}
+
