--- a/src/App.css
+++ b/src/App.css
@@ -198,10 +198,14 @@ form button{
 }  */
 
 
+*{
+  margin: 0px;
+  padding: 0px;
+}
 
 body{
   background-color: rgb(43,43,72);
-   width: 100%;
+  width: 100%;
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -209,7 +213,40 @@ body{
 }
 
 .passwordBox{
-  width: 300px;
-  height: 300px;
+  width: 350px;
+  padding: 20px;
+  background-color: blueviolet;
 }
 
+.passwordBoxin{
+  display: flex;
+}
+
+.passwordBoxin input{
+  flex-basis: 80%;
+  padding-left: 5px;
+}
+
+.passwordBoxin button{
+  flex-basis: 20%;
+  padding: 10px 0px;
+}
+
+.passlengh{
+  padding: 10px 0px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+}
+
+.passlengh input{
+  padding: 10px 0px;
+  width:60px;
+}
+
+.btn{
+  width: 100%;
+  padding: 10px 0px;
+  cursor: pointer;
+}
